[project]
name = "example_ctn"
version = "0.0.1"
authors = [
    {name = "Cuong Tao", email = "taongoccuong.dp@gmail.com"}
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programing Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

